syntax = "proto3";
option go_package="github.dev/nireitdev/go-C2-Prana/proto";

//Comandos de Admin/Implant hacia Server
service Server{
	rpc AdminTask( TaskRequest ) returns ( TaskResult );

	//Implant cmds:
	rpc ImplantTask( ImplantRequest) returns ( ImplantResult );
	rpc ImplantAlive(AliveMsg) returns (Empty);
}

//Server "push" comandos hacia Implant
service PushCommand{
	rpc PushCmd( PushRequest) returns (PushResult);
}


message ImplantRequest {
	string Request = 1;
}

message ImplantResult {
	string Result = 1;
}

message PushRequest {
	string Request = 1;
}

message PushResult {
	string Result = 1;
}

message AliveMsg{
	string ImplantID = 1;
	string IpAddr = 2;
	string OS = 3;
}

message TaskRequest{
	string TaskID =1 ;
	string ImplantID =2;
	string Command  =3;
}

message TaskResult{
	string TaskID =1 ;
	TaskStatus Status = 2;
	string Result  =3;
}

enum TaskStatus{
	NEWTASKOK = 0;
	IMPLANTRESPONSEOK = 1;
	IMPLANTLOST = 2;
}
message Empty{

}
